<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".activity.MainActivity">


    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/webIcon"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:src="@drawable/search_24"
                android:tint="@color/black" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/topSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_design"
                android:hint="@string/Enter_Url"
                android:paddingHorizontal="5dp"
                android:singleLine="true"
                android:visibility="visible"
                tools:visibility="visible" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tabsBtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/custom_tabs_textview"
                android:text="@string/_1"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginVertical="8dp"
                android:src="@drawable/ic_refresh"
                android:layout_marginHorizontal="4dp"/>

            <ImageButton
                android:id="@+id/ref"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/ref"
                android:src="@drawable/ic_refresh" />

            <ImageButton
                android:id="@+id/goBtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/go_btn"
                android:src="@drawable/baseline_arrow_forward_24" />


        </LinearLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleY="0.5"
            android:visibility="gone" />

    </LinearLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/mypage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_design"
        android:backgroundTint="@color/aqua"
        android:contentDescription="@string/st"
        android:src="@drawable/st"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_design"
        android:backgroundTint="@color/silver"
        android:contentDescription="@string/st"
        android:src="@drawable/ic_chatbott"
        android:scaleType="fitCenter"
        app:maxImageSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/textBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_design"
        android:backgroundTint="@color/silver"
        android:contentDescription="@string/st"
        android:src="@drawable/camera34343"
        android:scaleType="fitCenter"
        app:maxImageSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"/>


</androidx.constraintlayout.motion.widget.MotionLayout>